--- a/sshremote/templates/index.html
+++ b/sshremote/templates/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="../statics/base.js" type="text/javascript"></script>
-    <script src="../statics/jquery.js" type="text/javascript"></script>
+    <script src="../static/base.js" type="text/javascript"></script>
+    <script src="../static/jquery.js" type="text/javascript"></script>
     <link href="{{ url_for('static', filename='index.css') }}" rel="stylesheet" />
     <!--<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">-->
 </head>
